--- a/pfirst/src/app/new-courses/new-courses.component.html
+++ b/pfirst/src/app/new-courses/new-courses.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="jumbotron jumbotron-fluid"> -->
+<div class="jumbotron jumbotron-fluid">
 <div class="container">
   <h1 class="display-4" align="center">Faire les courses</h1>
   <table align="center">
@@ -18,13 +18,15 @@
         </div>
 
         <!--#############DISPO######################-->
-
         <div class="form-group">
-          <label for="dispo"><h2>Quand voulez vous que les courses soient faites au plus tard ? (Date et heure)</h2>
-          </label>
-          <input type="date" id="dispo" name="dispo">
-          <input type="time" id="dispo" name="dispo2">
+          <div class="jumbotron" id="formulaire">
+            <label for="dispo"><h2>Quand voulez vous que les courses soient faites au plus tard ? (Date et heure)</h2>
+            </label>
+            <input type="date" id="dispo" name="dispo">
+            <input type="time" id="dispo" name="dispo2">
+          </div>
 
+          <!--#############DATE######################-->
           <div class="jumbotron" id="formulaire">
             <div class="form-group">
               <label for="dispo"><h2>Quand voulez vous que les courses soient faites au plus tard ? (Date et heure)</h2>
@@ -117,5 +119,5 @@
 
   </table>
 </div>
-<!-- </div> -->
+</div>
 
