--- a/pfirst/src/app/new-menage/new-menage.component.html
+++ b/pfirst/src/app/new-menage/new-menage.component.html
@@ -1,6 +1,6 @@
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
-      <h1 class="display-4" align="center">Faire les courses</h1>
+      <h1 class="display-4" align="center">Menage !</h1>
         <table align="center">
   
           <!--#############PRENOM######################-->
@@ -14,8 +14,8 @@
               <!--#############DISPO######################-->
               <div class= "form-group">
                 <label for="dispo"> <h2>Quand souhaitez vous que quelqu'un vienne vous aider a faire le menage (Date et heure)</h2></label>
-                <input type="date" id="dispo" name="dispo">
-                <input type="time" id="dispo" name ="dispo2">
+                <input type="date" id="date" name="date">
+                <input type="time" id="heure" name ="heure">
               </div>
 
               <div class="input-group mb-3">
@@ -25,12 +25,17 @@
               </div>
 
               <div class="form-group">
-                <label for ="lieu" ><h2>Lieu en particuler ?</h2></label>
-                <input type="text" id="lieu" class="form-control" formControlName="lieu">
+                <label for ="salle" ><h2>Quel salle necesite d'etre nettoyer </h2></label>
+                <input type="text" id="salle" class="form-control" formControlName="salle">
+              </div>
+
+              <div class="form-group">
+                <label for ="localisation" ><h2>Indiquer (au minimum) la ville ou vous vous trouvez </h2></label>
+                <input type="text" id="localisation" class="form-control" formControlName="localisation">
               </div>
 
 
-              <!--#############LISTE DE COURSES######################-->
+              <!--#############LISTE DE MATERIEL######################-->
             <div class= "form-group">
                 <label for="liste"><h2>Liste du materiel qui est a votre disposition</h2></label>
   
@@ -77,7 +82,7 @@
               </div>
               <br>
   
-              <button type="submit" class="btn btn-primary">Soumettre</button>
+              <button type="submit" class="btn btn-primary" [disabled]="menageForm.invalid" >Soumettre</button>
             </form>
   
           </div>
