style des services

--- a/pfirst/src/app/accompagner-single/accompagner-single.component.html
+++ b/pfirst/src/app/accompagner-single/accompagner-single.component.html
@@ -1,6 +1,39 @@
-<h2>Vous souhaitez accompagner {{User}} a {{Local}} <img src="../../assets/data/accompagner.png" class="imageservice"/> </h2>
-<h2>Vous allez pouvoir aider {{User}} (cliquer pour voir son profil) </h2>
-<h2> {{User}} aimerez que vous lui veniez en aide ce jour ci -- {{Dispo}}</h2>
-<h2> {{Kind}}</h2>
-<h2> {{User}} aimerait bien que vous lui portez compagnie de {{Quand}} a --{{Local}} </h2>
-<h2>Description,commentaires, indications ... {{Description}}</h2>
+<br>
+
+<h1 class="display-4" align="center">{{User}} a besoin de toi</h1>
+
+
+
+
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <table align="center" cellpadding="20">
+
+      <tr>
+        <td><h2>Service : </h2></td>
+        <td>Accompagner </td>
+      </tr>
+      <tr>
+        <td><h2>Types d'accompagnement:</h2></td>
+        <td>{{Kind}}</td>
+
+
+      <tr>
+        <td><h2>Endroit ou accompagner</h2></td>
+        <td>{{Local}}</td>
+      </tr>
+      <tr>
+        <td><h2>Quand ?</h2></td>
+        <td>{{Dispo}}</td>
+      </tr>
+      <tr>
+        <td><h2>Plage horaire:</h2></td>
+        <td>{{Dispo}}</td>
+      </tr>
+
+      <tr>
+        <td><h2>Commentaire</h2>{{Description}}</td>
+      </tr>
+    </table>
+  </div>
+</div>
