--- a/pfirst/src/app/new-accompage/new-accompage.component.html
+++ b/pfirst/src/app/new-accompage/new-accompage.component.html
@@ -29,8 +29,8 @@
               </div>
 
               <div class= "form-group">
-                <label for="dispo"> <h2>Quel date cela vous conviendrez-t-il></h2></label>
-                <input type="date" id="dispo" name="dispo">
+                <label for="date"> <h2>Quel date cela vous conviendrez-t-il></h2></label>
+                <input type="date" id="dispo" name="date">
               </div>
 
               <div class="form-group">
