--- a/pfirst/src/app/new-menage/new-menage.component.html
+++ b/pfirst/src/app/new-menage/new-menage.component.html
@@ -13,7 +13,7 @@
   
               <!--#############DISPO######################-->
               <div class= "form-group">
-                <label for="dispo"> <h2>Quand souhaitez vous que quelqu'un vienne vous aider a faire le menage (Date et heure)</h2></label>
+                <label for="date"> <h2>Quand souhaitez vous que quelqu'un vienne vous aider a faire le menage (Date et heure)</h2></label>
                 <input type="date" id="date" name="date">
                 <input type="time" id="heure" name ="heure">
               </div>
