--- a/pfirst/src/app/menage-single/menage-single.component.html
+++ b/pfirst/src/app/menage-single/menage-single.component.html
@@ -1,22 +1,56 @@
+<br>
 
-<div class="card" >
-    <div class="card-header">
-        Menage
-      </div>
-    <div class="card-body">
-        <h2 class="card-title">Vous souhaitez aider quelqu'un a faire son menage! Super !
-            <img src="../../assets/data/menage.png" class="imageservice"/> </h2>
-        <p class="card-text"> Vous allez pouvoir aider {{User}} (cliquer pour voir son profil)</p>
-        <p class="card-text"> {{User}} se trouve aux alentours de {{Localisation}}, contactez le pour avoir plus d'information</p>
-        <p class="card-text">{{User}} aimerait avoir de l' aide pour netoyer : {{Salle}}, c' est une piece qui fait {{Surface}} m² comme surface</p>
+<h1 class="display-4" align="center">{{User}} a besoin de toi</h1>
 
-        <p class="card-text">Si cela vous chauffe {{User}} souhaite que ca soit fait le {{Date}} a {{Heure}}</p>
 
-        <p class="card-text">Voici la liste du materiel qui est a votre disposition</p>
-        <ul class="list-group list-group-flush">
-            <li class="list-group-item" *ngFor ="let elt of Materiel">{{elt}}</li>
-        </ul>
-        <p class="class-text">Description,commentaires, indications ... {{Description}}</p>
 
-    </div>
-    </div>  
+
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <table align="center" cellpadding="20">
+
+      <tr>
+        <td><h2>Service : </h2></td>
+        <td>Menage</td>
+      </tr>
+      <tr>
+        <td><h2>Salle a nettoyer :</h2></td>
+        <td>{{Salle}}</td>
+      </tr>
+      <tr>
+        <td><h2>Surface a nettoyer :</h2></td>
+        <td>{{Surface}}  m²</td>
+      </tr>
+
+
+      <tr>
+        <td><h2>Liste du materiel de {{User}}</h2></td>
+        <td>
+          <ul class="list-group">
+            <div *ngFor="let elt of Materiel">
+              <li class="list-group-item d-flex justify-content-between align-items-center">
+                {{elt}}
+              </li>
+            </div>
+          </ul>
+
+          <button class="btn btn-secondary" (click)="copyToClipboard(this.liste_a_copier)" >
+            Copier la liste</button>
+        </td>
+        <td *ngIf="copied"><i>Liste copiée.</i></td>
+      </tr>
+      <tr>
+        <td><h2>Localisation: </h2></td>
+        <td>{{Localisation}}</td>
+      </tr>
+      <tr>
+        <td><div class="toast-header">
+            <strong class="mr-auto">Description:</strong>
+          </div>
+          <div class="toast-body">
+              {{Description}}
+          </div></td>
+      </tr>
+    </table>
+  </div>
+</div>
