--- a/pfirst/src/app/new-courses/new-courses.component.html
+++ b/pfirst/src/app/new-courses/new-courses.component.html
@@ -20,19 +20,19 @@
         <!--#############DISPO######################-->
         <div class="form-group">
           <div class="jumbotron" id="formulaire">
-            <label for="dispo"><h2>Quand voulez vous que les courses soient faites au plus tard ? (Date et heure)</h2>
+            <label for="date"><h2>Quand voulez vous que les courses soient faites au plus tard ? (Date et heure)</h2>
             </label>
-            <input type="date" id="dispo" name="dispo">
-            <input type="time" id="dispo" name="dispo2">
+            <input type="date" id="dispo" name="date">
+            <input type="time" id="dispo" name="date">
           </div>
 
           <!--#############DATE######################-->
           <div class="jumbotron" id="formulaire">
             <div class="form-group">
-              <label for="dispo"><h2>Quand voulez vous que les courses soient faites au plus tard ? (Date et heure)</h2>
+              <label for="date"><h2>Quand voulez vous que les courses soient faites au plus tard ? (Date et heure)</h2>
               </label>
-              <input type="datetime" id="dispo" name="dispo">
-              <input type="time" id="dispo" name="dispo2">
+              <input type="datetime" id="date" name="date">
+              <input type="time" id="date" name="date2">
             </div>
 
           </div>
