--- a/pfirst/src/app/new-cuisine/new-cuisine.component.html
+++ b/pfirst/src/app/new-cuisine/new-cuisine.component.html
@@ -11,9 +11,9 @@
 
 
                   <div class= "form-group">
-                    <label for="dispo"> <h2>Quand souhaitez vous que quelqu'un vienne vous aider pour la cuisine ? (Date et heure)</h2></label>
-                    <input type="date" id="dispo" name="dispo">
-                    <input type="time" id="dispo" name ="dispo2">
+                    <label for="date"> <h2>Quand souhaitez vous que quelqu'un vienne vous aider pour la cuisine ? (Date et heure)</h2></label>
+                    <input type="date" id="dispo" name="date">
+                    <input type="time" id="dispo" name ="date">
                   </div>
 
                   <div class= "form-group">
