--- a/pfirst/src/app/propose/propose.component.html
+++ b/pfirst/src/app/propose/propose.component.html
@@ -1,15 +1,19 @@
+<h1 class ="text-center"> Les services qui sont actuellement proposes</h1>
 <div class="col-xs-12">
-    <div class="row">
-      <h2> Les services qui sont actuellement proposes</h2>
+    <div class="row">      
       <ul class="list-group">
-          <app-service *ngFor ="let service of services,let i =index"
-          [serviceName]="service.name"
-          [serviceUser]="service.user"
-          [serviceDescription]="service.description"
-          [serviceImage]="service.image"
-          [index]="i"
-          [id]="service.id"></app-service>
-
+        <div class="d-flex justify-content-between">
+          <div class="card-columns">
+            <app-service  *ngFor ="let service of services,let i =index"
+            [serviceName]="service.name"
+            [serviceUser]="service.user"
+            [serviceDescription]="service.description"
+            [serviceImage]="service.image"
+            [serviceDate]="service.date"
+            [index]="i"
+            [id]="service.id"></app-service>
+          </div>
+        </div>
       </ul>
     </div>
   </div>
