--- a/pfirst/src/app/service/service.component.css
+++ b/pfirst/src/app/service/service.component.css
@@ -1,4 +1,14 @@
-.imageservice{
-    width: 30px;
-	height: 30px;
+.card-img-top{
+    width: 430px;
+    height: 200 px;
+    
+}
+
+.card{
+    width: 300px;
+  }
+
+.annonce_courte {
+    width: 100%;
+    height: 100%;
 }
