--- a/pfirst/src/app/service/service.component.css
+++ b/pfirst/src/app/service/service.component.css
@@ -1,6 +1,6 @@
 .card-img-top{
-    width: 430px;
-    height: 200 px;
+    
+    height: 100%;
     
 }
 
@@ -12,3 +12,4 @@
     width: 100%;
     height: 100%;
 }
+
