--- a/pfirst/src/app/service/service.component.html
+++ b/pfirst/src/app/service/service.component.html
@@ -1,25 +1,15 @@
 
-    <div class="annonce_courte">
-      <div class="card" style="width:auto;">
-        <img [src]="serviceImage" class="card-img-top" alt="...">
-        
-          <div class="card-header">
-          <h2 class="card-title">{{serviceName}} pour {{serviceUser}}</h2>
-          </div>
-          <div class="card-body" >
-          <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-            <div class="toast-header">
-              <strong class="mr-auto">Description:</strong>
-            </div>
-            <div class="toast-body">
-                {{serviceDescription}}
-            </div>
-            <div class="toast-header">
-              <strong class="mr-auto">Pour le:</strong>
-            </div>
-            <div class="toast-body">
-                {{serviceDate}}
-            </div>
+
+    <div class="card mb-3" style="width:max-content;">
+      <div class="row no-gutters">
+        <div class="col-md-1">
+          <img [src]="serviceImage" class="card-img-top" alt="...">
+        </div>
+        <div class="col-md-11">
+          <div class="card-body">
+            <h2 class="card-title">{{serviceName}} pour {{serviceUser}}</h2>
+            <p class="card-text">Description: {{serviceDescription}}</p>
+            <p class="card-text"><small class="text-muted">Pour le :{{serviceDate}}</small></p>
           </div>
           <a href="#" class="btn btn-primary"[routerLink]="[id]" >Voir l'annonce</a>
         </div>
