--- a/pfirst/src/app/profil/profil.component.html
+++ b/pfirst/src/app/profil/profil.component.html
@@ -1,18 +1,18 @@
 <div id="profilMain">
 
-  <table cellpadding="10" border="5px solid">
+  <table cellpadding="10" width="100%" border="solid 3px">
     <tr>
-      <td rowspan="2">
-        <img src="../../assets/data/pdp-test.jpg" id="myProfilPic">
+      <td rowspan="2" width="18%">
+        <div id="profil-pic"></div>
       </td>
-      <td>
+      <td width="15%">
         <span class="user_identifier">{{this.fname}} {{this.lname}}</span>
       </td>
-      <td width="70%" rowspan="2">
+      <td width="40%" rowspan="2">
         <table>
           <tr>
-            <td width="30%">
-              <h1 id="nivTitle">Progression</h1>
+            <td width="30%" align="center">
+              <img src="../../assets/data/progression.png" id="progress-img">
             </td>
           </tr>
           <tr align="center">
@@ -22,6 +22,9 @@
           </tr>
         </table>
       </td>
+      <td align="center">
+        <img src="../../assets/data/rating.png" id="rating-img">
+      </td>
     </tr>
     <tr>
       <td>
@@ -29,13 +32,18 @@
           A propos : {{bio}}
         </span>
       </td>
+      <td align="center">
+        <p style="font-size: x-large">
+          {{average_grade}}/5
+        </p>
+      </td>
     </tr>
   </table>
 
   <div id="experience-wrapper">
     <table width="1500px">
       <tr align="center">
-        <td width="100%">
+        <td width="100%" align="center">
           <app-services-experience></app-services-experience>
         </td>
       </tr>
