--- a/pfirst/src/app/services-experience/services-experience.component.css
+++ b/pfirst/src/app/services-experience/services-experience.component.css
@@ -4,11 +4,6 @@
   width: auto;
 }
 
-#history
-{
-  align: right bottom;
-}
-
 #history-serv
 {
   text-align: left;
@@ -34,4 +29,15 @@
   width: 80px;
   height: auto;
   margin-left: 230px;
+}
+
+#last-serv-img
+{
+  width: 300px;
+  height: auto;
+}
+
+#history-button
+{
+  margin-left: 100px;
 }
