services récupérés et envoyer au back

--- a/pfirst/src/app/service/service.component.html
+++ b/pfirst/src/app/service/service.component.html
@@ -1,4 +1,4 @@
-
+<any>
 
     <div class="card mb-3" style="width:75%;">
       <div class="row no-gutters">
@@ -14,7 +14,7 @@
                 <a href="#" class="btn btn-primary"[routerLink]="[id]" >Voir l'annonce</a>
               </div>
           </div>
-          
+
         </div>
       </div>
     </div>
