enlever nodes.zip

--- a/pfirst/src/app/services-experience/services-experience.component.html
+++ b/pfirst/src/app/services-experience/services-experience.component.html
@@ -7,10 +7,10 @@
   </tr>
   <tr>
     <td align="center">
-      Pour vous
+      <span class="for-by-indicator">Pour vous</span>
     </td>
     <td align="center">
-      Par vous
+      <span class="for-by-indicator">Par vous</span>
     </td>
   </tr>
   <tr>
