--- a/pfirst/src/app/demande/demande.component.html
+++ b/pfirst/src/app/demande/demande.component.html
@@ -1,6 +1,8 @@
+<div class="jumbotron text-center">
+  <h1 class="display-4 text-white">Demander un service</h1>
+  <h2 class="text-white">Vous avez besoin d'aide ? Faites le savoir et quelqu'un vous aidera.</h2>
+</div>
 
-<h2 align="center">Rendre service</h2>
-<br>
 <table align = "center" cellpadding="50">
   <tr>
     <td>
