--- a/pfirst/src/app/accompagner-single/accompagner-single.component.html
+++ b/pfirst/src/app/accompagner-single/accompagner-single.component.html
@@ -1,7 +1,13 @@
 <br>
 
-<h1 class="display-4" align="center">{{User}} a besoin de toi</h1>
+<table align="center">
+  <tr><h1 class="display-4" align="center">{{User}} a besoin de toi</h1>
+  </tr>
+  <tr>
+    <span class="badge badge-pill badge-info" style="cursor:pointer">Voir le profil</span>
 
+  </tr>
+</table>
 
 
 
