--- a/pfirst/src/app/courses-single/courses-single.component.html
+++ b/pfirst/src/app/courses-single/courses-single.component.html
@@ -1,6 +1,12 @@
 <br>
+<table align="center">
+  <tr><h1 class="display-4" align="center">{{User}} a besoin de toi</h1>
+  </tr>
+  <tr>
+    <span class="badge badge-pill badge-info" style="cursor:pointer">Voir le profil</span>
 
-<h1 class="display-4" align="center">{{User}} a besoin de toi</h1>
+  </tr>
+</table>
 
 
 <div class="jumbotron jumbotron-fluid">
