--- a/pfirst/src/app/menage-single/menage-single.component.html
+++ b/pfirst/src/app/menage-single/menage-single.component.html
@@ -1,6 +1,11 @@
-<br>
-
-<h1 class="display-4" align="center">{{User}} a besoin de toi</h1>
+<table align="center">
+  <tr>
+    <td><h1 class="display-4" align="center">{{User}} a besoin de toi</h1></td>
+  </tr>
+  <tr>
+    <td><span class="badge badge-pill badge-info" style="cursor:pointer">Voir le profil</span></td>
+  </tr>
+</table>
 
 
 
