--- a/pfirst/src/app/courses-single/courses-single.component.html
+++ b/pfirst/src/app/courses-single/courses-single.component.html
@@ -41,8 +41,9 @@
       </tr>
     </table>
 
-
-
+    <div class="text-right">
+      <a  class="btn btn-primary" routerLink="/propose">Retour à la liste</a>
+    </div>
   </div>
 </div>
 
