--- a/pfirst/src/app/cuisine-single/cuisine-single.component.html
+++ b/pfirst/src/app/cuisine-single/cuisine-single.component.html
@@ -30,5 +30,8 @@
         <td><h2>Commentaire</h2>{{Description}}</td>
       </tr>
     </table>
+    <div class="text-right">
+      <a  class="btn btn-primary" routerLink="/propose">Retour à la liste</a>
+    </div>
   </div>
 </div>
