--- a/pfirst/src/app/menage-single/menage-single.component.html
+++ b/pfirst/src/app/menage-single/menage-single.component.html
@@ -52,5 +52,8 @@
           </div></td>
       </tr>
     </table>
+    <div class="text-right">
+      <a  class="btn btn-primary" routerLink="/propose">Retour à la liste</a>
+    </div>
   </div>
 </div>
