--- a/pfirst/src/app/propose/propose.component.html
+++ b/pfirst/src/app/propose/propose.component.html
@@ -1,17 +1,18 @@
 <h1 class ="text-center"> Les services qui sont actuellement proposes</h1>
-
-<div class="col-xs-12">
-  <div class="row">
-    <h2> Les services qui sont actuellement proposes</h2>
+<div class="row">
+  <div class="col-md-2">
+  </div>
+  <div class="col-md-10">
     <ul class="list-group">
       <app-service *ngFor ="let service of this.services_db,let i =index"
                    [serviceName]="service['name']"
                    [serviceUser]="service['user']"
                    [serviceDescription]="service['description']"
                    [serviceImage]="service['image']"
+                   [serviceDate]="service['date']"
                    [index]="i"
-                   [id]="service.id"></app-service>
-
+                   [id]="service.id">
+                  </app-service>
     </ul>
   </div>
 </div>
