--- a/pfirst/src/app/service/service.component.html
+++ b/pfirst/src/app/service/service.component.html
@@ -1,18 +1,27 @@
-<any>
 
-    <div class="card mb-3" style="width:75%;">
+
+    <div class="card mb-3 rounded-lg rounded-lg" style="width:70%;">
       <div class="row no-gutters">
-        <div class="col-md-2">
-          <img [src]="serviceImage" class="card-img-top" alt="...">
+          <div class="col-md-2">
+            <img [src]="serviceImage"  class="card-img-top" alt="...">
         </div>
         <div class="col-md-10">
           <div class="card-body">
+            <div class="text-left">
             <h2 class="card-title">{{serviceName}} pour {{serviceUser}}</h2>
             <p class="card-text">Description: {{serviceDescription}}</p>
-            <p class="card-text"><small class="text-muted">Pour le :{{serviceDate}}</small></p>
+          </div>
+          <div class="row no-gutters">
+            <div class="col-md-2">
+              <div class="text-left">
+                <p class="card-text"><small class="text-muted">Pour le :{{serviceDate}}</small></p>
+              </div>
+            </div> 
+          <div class="col-md-10">
               <div class="text-right">
                 <a href="#" class="btn btn-primary"[routerLink]="[id]" >Voir l'annonce</a>
               </div>
+            </div>
           </div>
 
         </div>
