--- a/pfirst/src/app/cuisine-single/cuisine-single.component.html
+++ b/pfirst/src/app/cuisine-single/cuisine-single.component.html
@@ -4,7 +4,7 @@
   <tr><h1 class="display-4" align="center">{{User}} a besoin de toi</h1>
   </tr>
   <tr>
-    <span class="badge badge-pill badge-info" style="cursor:pointer">Voir le profil</span>
+    <button type="button" class="btn btn-info" (click)="goProfil()">Voir le profil</button>
 
   </tr>
 </table>
