--- a/pfirst/src/app/menage-single/menage-single.component.html
+++ b/pfirst/src/app/menage-single/menage-single.component.html
@@ -3,7 +3,8 @@
     <td><h1 class="display-4" align="center">{{User}} a besoin de toi</h1></td>
   </tr>
   <tr>
-    <td><span class="badge badge-pill badge-info" style="cursor:pointer">Voir le profil</span></td>
+    <td><button type="button" class="btn btn-info" (click)="goProfil()">Voir le profil</button>
+    </td>
   </tr>
 </table>
 
