--- a/pfirst/src/app/modal-user/modal-user.component.html
+++ b/pfirst/src/app/modal-user/modal-user.component.html
@@ -1,7 +1,7 @@
 <table>
   <tr>
     <td>
-      <a routerLink="profil">Mon profil</a><br>
+      <button type="button" class="btn btn-dark" (click)="myProfil()" >Mon profil</button><br>
     </td>
   </tr>
   <tr>
