resolution des accès profil et single-service

--- a/pfirst/src/app/cuisine-single/cuisine-single.component.html
+++ b/pfirst/src/app/cuisine-single/cuisine-single.component.html
@@ -4,7 +4,8 @@
   <tr><h1 class="display-4" align="center">{{User}} a besoin de toi</h1>
   </tr>
   <tr>
-    <button type="button" class="btn btn-info" (click)="goProfil()">Voir le profil</button>
+    <button type="button" class="btn btn-info" routerLink="/profil/other_user">Voir le profil</button>
+    <!-- <button type="button" class="btn btn-info" (click)="goProfil()">Voir le profil</button> -->
 
   </tr>
 </table>
