--- a/pfirst/src/app/single-service/single-service.component.html
+++ b/pfirst/src/app/single-service/single-service.component.html
@@ -1,5 +1,5 @@
-<app-courses-single *ngIf="type=='service1'"></app-courses-single>
-<app-menage-single *ngIf="type=='service2'" ></app-menage-single>
-<app-cuisine-single *ngIf="type=='service3'"></app-cuisine-single>
-<app-accompagner-single *ngIf="type=='service4'"></app-accompagner-single>
+<app-courses-single *ngIf="type=='service1'" [service_descriptor]="this.serviceDescriptor"></app-courses-single>
+<app-menage-single *ngIf="type=='service2'" [service_descriptor]="this.serviceDescriptor"></app-menage-single>
+<app-cuisine-single *ngIf="type=='service3'" [service_descriptor]="this.serviceDescriptor"></app-cuisine-single>
+<app-accompagner-single *ngIf="type=='service4'" [service_descriptor]="this.serviceDescriptor"></app-accompagner-single>
 <a routerLink="/propose">Retour à la liste</a>
