--- a/pfirst/src/app/accompagner-single/accompagner-single.component.html
+++ b/pfirst/src/app/accompagner-single/accompagner-single.component.html
@@ -1,10 +1,12 @@
 <br>
 
 <table align="center">
-  <tr><h1 class="display-4" align="center">{{User}} a besoin de toi</h1>
+  <tr>
+    <h1 class="display-4" align="center">{{User}} a besoin de toi</h1>
   </tr>
   <tr>
-    <button type="button" class="btn btn-info" (click)="goProfil()">Voir le profil</button>
+    <button type="button" class="btn btn-dark" routerLink="/profil/other_user">Voir le profil</button>
+    <!-- <button type="button" class="btn btn-info" (click)="goProfil()">Voir le profil</button> -->
 
   </tr>
 </table>
