--- a/pfirst/src/app/menage-single/menage-single.component.html
+++ b/pfirst/src/app/menage-single/menage-single.component.html
@@ -3,7 +3,9 @@
     <td><h1 class="display-4" align="center">{{User}} a besoin de toi</h1></td>
   </tr>
   <tr>
-    <td><button type="button" class="btn btn-info" (click)="goProfil()">Voir le profil</button>
+    <td>
+      <button type="button" class="btn btn-info" routerLink="/profil/other_user">Voir le profil</button>
+      <!-- <button type="button" class="btn btn-info" (click)="goProfil()">Voir le profil</button> -->
     </td>
   </tr>
 </table>
