--- a/pfirst/src/app/modal-user/modal-user.component.html
+++ b/pfirst/src/app/modal-user/modal-user.component.html
@@ -1,7 +1,8 @@
 <table>
   <tr>
     <td>
-      <button type="button" class="btn btn-dark" (click)="myProfil()" >Mon profil</button><br>
+      <button type="button" class="btn btn-dark" routerLink="profil/current_user" >Mon profil</button><br>
+    <!--  <button type="button" class="btn btn-dark" (click)="myProfil()" >Mon profil</button><br> -->
     </td>
   </tr>
   <tr>
