--- a/pfirst/src/app/propose/propose.component.html
+++ b/pfirst/src/app/propose/propose.component.html
@@ -13,7 +13,8 @@
                    [serviceDescription]="service['description']"
                    [serviceImage]="service['image']"
                    [index]="i"
-                   [id]="service.id"></app-service>
+                   [id]="service.id">
+      </app-service>
 
     </ul>
   </div>
