--- a/pfirst/src/app/single-service/single-service.component.html
+++ b/pfirst/src/app/single-service/single-service.component.html
@@ -1,4 +1,4 @@
-<app-courses-single *ngIf="type=='service1'"></app-courses-single>
-<app-menage-single *ngIf="type=='service2'" ></app-menage-single>
-<app-cuisine-single *ngIf="type=='service3'"></app-cuisine-single>
-<app-accompagner-single *ngIf="type=='service4'"></app-accompagner-single>
+<app-courses-single *ngIf="type==3"></app-courses-single>
+<app-menage-single *ngIf="type==2" ></app-menage-single>
+<app-cuisine-single *ngIf="type==3"></app-cuisine-single>
+<app-accompagner-single *ngIf="type==4"></app-accompagner-single>
