début de vérification du champ mail à la connexion

--- a/pfirst/src/app/auth/auth.component.html
+++ b/pfirst/src/app/auth/auth.component.html
@@ -1,3 +1,5 @@
+<p *ngIf="field_non_valid" class="alert alert-danger">L'adresse mail ou le mot de passe est invalide.</p>
+
 <br>
 <h2 align="center">Connexion</h2>
 <br>
