maintient de la connexion après l'inscription et affichage du profil selon le token

--- a/pfirst/src/app/profil/profil.component.css
+++ b/pfirst/src/app/profil/profil.component.css
@@ -10,7 +10,7 @@
   border-radius: 50%;
   width: 250px;
   height: 250px;
-  background-image: url("../../assets/data/pdp-test.jpg");
+  background-image: url("../../assets/data/photo_undefined.png");
   background-size: cover;
 }
 
