--- a/pfirst/src/app/app-view/app-view.component.html
+++ b/pfirst/src/app/app-view/app-view.component.html
@@ -58,5 +58,6 @@
 </div>
 
 
-
+<button (click)="this.authService.removeUserInfo()" class="btn btn-outline-danger" type="button">Se déconnecter
+</button>
 
