--- a/pfirst/src/app/profil/profil.component.html
+++ b/pfirst/src/app/profil/profil.component.html
@@ -6,7 +6,7 @@
         <div id="profil-pic"></div>
       </td>
       <td width="15%">
-        <span class="user_identifier">{{info_user[0]['fname']}} {{info_user[0]['lname']}}</span>
+        <span class="user_identifier">{{info_user['firstName']}} {{info_user['lastName']}}</span>
       </td>
       <td width="40%" rowspan="2">
         <table>
@@ -29,12 +29,12 @@
     <tr>
       <td>
         <span id="aPropos">
-          A propos : {{info_user[0]['bio']}}
+          A propos : {{info_user['bio']}}
         </span>
       </td>
       <td align="center">
         <p style="font-size: x-large">
-          {{info_user[0]['average_grade']}}/5
+          (en dur){{4}}/5
         </p>
       </td>
     </tr>
