leger avant pull

--- a/pfirst/src/app/profil/profil.component.html
+++ b/pfirst/src/app/profil/profil.component.html
@@ -1,6 +1,6 @@
 <div id="profilMain">
 
-  <table cellpadding="10" width="100%" border="solid 3px">
+  <table cellpadding="10" width="100%">
     <tr>
       <td rowspan="2" width="18%">
         <div id="profil-pic"></div>
