--- a/pfirst/src/app/services-experience/services-experience.component.html
+++ b/pfirst/src/app/services-experience/services-experience.component.html
@@ -1,4 +1,4 @@
-<table width="80%" cellpadding="40">
+<table width="80%" cellpadding="40" border="3px solid">
   <tr>
     <td align="center" colspan="2">
       <img src="../../assets/data/last_services.png" id="last-serv-img">
