accès au profil + mise en place pour accéder au profil depuis l'annonce + ajout de l'id du user dans les services avant de les envoyer au back

--- a/pfirst/src/app/menage-single/menage-single.component.html
+++ b/pfirst/src/app/menage-single/menage-single.component.html
@@ -4,7 +4,7 @@
   </tr>
   <tr>
     <td>
-      <button type="button" class="btn btn-info" routerLink="/profil/other_user">Voir le profil</button>
+      <button type="button" class="btn btn-info" (click)="goProfil()" )>Voir le profil</button>
       <!-- <button type="button" class="btn btn-info" (click)="goProfil()">Voir le profil</button> -->
     </td>
   </tr>
