--- a/pfirst/src/app/modal-user/modal-user.component.html
+++ b/pfirst/src/app/modal-user/modal-user.component.html
@@ -1,7 +1,7 @@
 <table>
   <tr>
     <td align="center">
-      <button type="button" class="btn btn-dark" (click)="this.goThenClose('profil/current_user')">Mon profil</button>
+      <button type="button" class="btn btn-dark" (click)="myProfil()">Mon profil</button>
       <br>
       <!--  <button type="button" class="btn btn-dark" (click)="myProfil()" >Mon profil</button><br> -->
     </td>
